@@ -9,6 +9,9 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class AppointmentMapper {
+    private AppointmentMapper() {
+    }
+
     public static AppointmentDto fromEntity(Appointment entity) {
         return AppointmentDto.builder()
                 .id(entity.getId())
@@ -30,7 +33,7 @@ public class AppointmentMapper {
     public static  <T, R> List<R> mapList(List<T> list, Function<T, R> mapper) {
 
         return list != null
-                ? list.stream().map(mapper).collect(Collectors.toList())
+                ? list.stream().map(mapper).toList()
                 : Collections.emptyList();
     }
 }
