@@ -9,6 +9,9 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class DoctorMapper {
+    private DoctorMapper() {
+    }
+
     public static DoctorDto fromEntity(Doctor entity) {
         return DoctorDto.builder()
                 .id(entity.getId())
@@ -37,7 +40,7 @@ public class DoctorMapper {
     public static  <T, R> List<R> mapList(List<T> list, Function<T, R> mapper) {
 
         return list != null
-                ? list.stream().map(mapper).collect(Collectors.toList())
+                ? list.stream().map(mapper).toList()
                 : Collections.emptyList();
     }
 }
